# oil-and-altar

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md
.github/workflows/: pages.yml
backend/: pyproject.toml
backend/app/: db.py  main.py
backend/tests/: test_api.py
frontend/: app.js  gallery-data.js  index.html  styles.css
scripts/: build_gallery.py
